Update French translation (#344)
Co-authored-by: Wang Han <wanghan1995315@gmail.com>
Co-authored-by: LoveSy <shana@zju.edu.cn>
Co-authored-by: tehcneko <7764726+tehcneko@users.noreply.github.com>

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -35,6 +35,7 @@
     <string name="module_repo">Dépôt</string>
     <string name="module_repo_summary">Dépôts de modules (Alpha)</string>
     <string name="about_view_source_code"><![CDATA[Voir le code source sur %s<br/>Rejoindre notre canal %s]]></string>
+    <string name="about_translators">Traducteurs: %s</string>
 
     <string name="activated">Activé</string>
     <string name="not_installed">Non installé</string>
@@ -168,11 +169,11 @@
     <string name="module_release_no_more">Pas d\'autres versions</string>
     <string name="repo_load_failed">Échec de chargement du dépôt des modules: %s</string>
 
-
     <string name="app_destroyed">Cette application à été détruite, merci de vous assurer que vous l\'avez bien téléchargé depuis la source officielle.</string>
     <string name="outdated_manager">Version du Gestionnaire LSPosed et du noyau LSPosed ne sont pas cohérents. Merci de réinstaller la version correspondante.</string>
     <string name="lsposed_not_active">LSPosed n\'est pas installé ou n\'est pas actif.</string>
     <string name="verbose_log_not_avaliable">Journal détaillé indisponible, si vous l\'avez juste activé sans redémarrer, essayez à nouveau après avoir redémarré.</string>
     <string name="NotInstall">Non installé</string>
     <string name="NotInstallDetail">LSPosed n\'est pas installé</string>
+    <string name="translators"><![CDATA[<a href="https://forum.xda-developers.com/member.php?u=5332893">aRomXDA</a>]]></string>
 </resources>
