Manager crash report label minor change (#374)

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -190,4 +190,5 @@
     <string name="NotInstall">未安装</string>
     <string name="NotInstallDetail">LSPosed 未安装</string>
     <string name="about_translators">译者：%s</string>
+    <string name="copy_toast_msg">已复制</string>
 </resources>
