--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -27,29 +27,29 @@
     <string name="InstallDetail">點選安裝 LSPosed</string>
     <string name="Modules">模組</string>
     <plurals name="modules_enabled_count">
-        <item quantity="one">%d 模組已啟用</item>
-        <item quantity="other">%d 模組已啟用</item>
+        <item quantity="one">%d 個模組已啟用</item>
+        <item quantity="other">%d 個模組已啟用</item>
     </plurals>
     <string name="Logs">日誌</string>
     <string name="Settings">設定</string>
     <string name="About">關於</string>
     <string name="module_repo">倉庫</string>
     <string name="module_repo_summary">模組倉庫（Alpha）</string>
-    <string name="about_view_source_code"><![CDATA[在 %s 查看原始碼<br/>加入我们的 %s 頻道]]></string>
-    <string name="about_translators">譯者：%s</string>
+    <string name="about_view_source_code"><![CDATA[在 %s 檢視原始碼<br/>加入我們的 %s 頻道]]></string>
+    <string name="about_translators">翻譯者：%s</string>
 
     <string name="activated">已啟用</string>
     <string name="not_installed">未安裝</string>
     <string name="selinux_permissive">&lt;b&gt;警告：&lt;\/b&gt;SELinux 未處於嚴格模式！對此進行攻擊的惡意程式可以完全控制你的裝置，並可能造成你的財產損失和法律責任。</string>
     <string name="selinux_permissive_summary">SELinux 未處於嚴格模式！</string>
     <string name="partial_activated">部分啟用</string>
-    <string name="selinux_policy_not_loaded_summary">SEPolicy 未被正確載入</string>
-    <string name="selinux_policy_not_loaded"><![CDATA[<b>警告：</b>SEPolicy 未被正確載入，作用於系統框架的模組將不起作用。<br>請將此報告給 <a href="https://github.com/topjohnwu/Magisk/issues"><b>Magisk</b></a> 開發者。]]></string>
+    <string name="selinux_policy_not_loaded_summary">SEPolicy 未被正確讀取</string>
+    <string name="selinux_policy_not_loaded"><![CDATA[<b>警告：</b>SEPolicy 沒有被正確讀取，掛鉤系統框架的模組將無法運作。<br>請回報這類問題給<a href="https://github.com/topjohnwu/Magisk/issues"><b>Magisk</b></a>開發者]]></string>
     <string name="info_api_version">API 版本</string>
     <string name="info_framework_version">框架版本</string>
     <string name="info_manager_version">管理器版本</string>
     <string name="info_system_version">系統版本</string>
-    <string name="info_device">裝置</string>
+    <string name="info_device">裝置版本</string>
     <string name="info_system_abi">系統架構</string>
 
     <!-- LogsActivity -->
@@ -63,7 +63,7 @@
     <string name="logs_cleared">日誌清理成功</string>
     <string name="log_is_empty">日誌為空</string>
     <string name="scroll_top">滑動到最上面</string>
-    <string name="loading">正在載入…</string>
+    <string name="loading">正在載入……</string>
     <string name="scroll_bottom">滾動到底部</string>
     <string name="logs_cannot_read">無法讀取日誌: \n</string>
     <string name="menuReload">重新載入</string>
@@ -72,41 +72,41 @@
 
     <!-- Notification -->
     <string name="module_is_not_activated_yet">LSPosed 模組尚未啟用</string>
-    <string name="module_is_not_activated_yet_detailed">%s 已安裝, 但尚未啟用</string>
+    <string name="module_is_not_activated_yet_detailed">%s 已安裝，但尚未啟用</string>
     <string name="xposed_module_updated_notification_content">%s 已更新</string>
 
     <!-- ModulesActivity -->
     <string name="module_empty_description">（未提供介紹）</string>
     <string name="module_no_ui">該模組未提供使用者介面</string>
     <string name="xposed_module_updated_notification_title">LSPosed 模組已更新</string>
-    <string name="warning_xposed_min_version">該模組需要更新版本的 LSPosed(%d), 因此無法被啟用</string>
-    <string name="no_min_version_specified">該模組未指定所需的 LSPosed 版本</string>
-    <string name="warning_min_version_too_low">該模組針對 LSPosed %1$d 版本構建 , 由於不相容 %2$d 版本中的變更, 現在已被停用</string>
-    <string name="warning_installed_on_external_storage">此模組因被安裝在 SD 卡中而導致無法載入, 請將其移動到內部儲存</string>
+    <string name="warning_xposed_min_version">該模組需要更新版本的 LSPosed(%d)，因此無法被啟用</string>
+    <string name="no_min_version_specified">該模組未指定需要的 LSPosed 版本</string>
+    <string name="warning_min_version_too_low">該模組以 LSPosed 的 %1$d 為基礎組建，由於不相容 %2$d 版本中的變更，現在已被停用</string>
+    <string name="warning_installed_on_external_storage">此模組因為被安裝在記憶卡中而導致無法載入，請將其移動到內部儲存</string>
     <string name="module_uninstall">解除安裝</string>
     <string name="module_settings">模組設定</string>
-    <string name="view_in_repo">在倉庫中查看</string>
-    <string name="module_uninstall_message">要移除此模組嗎？</string>
+    <string name="view_in_repo">在倉庫中檢視</string>
+    <string name="module_uninstall_message">您確定要移除此模組嗎？</string>
     <string name="module_uninstalled">已移除 %1$s</string>
     <string name="module_uninstall_failed">移除失敗</string>
 
     <!-- AppListActivity -->
     <string name="compile_speed">重新最佳化</string>
-    <string name="compile_speed_msg">最佳化中…</string>
+    <string name="compile_speed_msg">最佳化中……</string>
     <string name="compile_done">最佳化完成</string>
     <string name="app_launch">執行</string>
     <string name="compile_failed">最佳化失敗或返回值為空</string>
-    <string name="compile_failed_with_info">最佳化失敗: </string>
+    <string name="compile_failed_with_info">最佳化失敗：</string>
     <string name="sort_by_name">程式名稱</string>
-    <string name="sort_by_name_reverse">程式名稱（降序）</string>
+    <string name="sort_by_name_reverse">程式名稱（遞減）</string>
     <string name="sort_by_package_name">包體名稱</string>
-    <string name="sort_by_package_name_reverse">包體名稱（降序）</string>
+    <string name="sort_by_package_name_reverse">包體名稱（遞減）</string>
     <string name="sort_by_install_time">安裝時間</string>
-    <string name="sort_by_install_time_reverse">安裝時間（降序）</string>
+    <string name="sort_by_install_time_reverse">安裝時間（遞減）</string>
     <string name="sort_by_update_time">更新時間</string>
-    <string name="sort_by_update_time_reverse">更新時間（降序）</string>
+    <string name="sort_by_update_time_reverse">更新時間（遞減）</string>
     <string name="menu_show_system_apps">系統程式</string>
-    <string name="menu_sort">排序…</string>
+    <string name="menu_sort">排序……</string>
     <string name="enable_module">啟用模組</string>
     <string name="no_scope_selected">未選擇任何程式。是否繼續？</string>
     <string name="menu_show_games">遊戲</string>
@@ -119,13 +119,13 @@
     <string name="requested_by_module">推薦的程式</string>
     <string name="module_disabled_no_selection">由於未選擇任何程式，模組 %s 已被停用。</string>
     <string name="android_framework">系統框架</string>
-    <string name="menu_backup_and_restore">備份…</string>
+    <string name="menu_backup_and_restore">備份……</string>
     <string name="menu_backup">備份</string>
     <string name="menu_restore">還原</string>
     <string name="force_stop">強制停止</string>
     <string name="force_stop_dlg_title">強制停止？</string>
     <string name="force_stop_dlg_text">如果您強行停止應用程式，可能導致行為異常。</string>
-    <string name="reboot_required">需要重啟手機才能套用此修改</string>
+    <string name="reboot_required">需要重新啟動手機才能套用此修改</string>
     <string name="reboot">重新啟動</string>
 
     <!-- ModulesActivity and AppListActivity -->
@@ -147,7 +147,7 @@
     <string name="settings_backup_success">備份完成！</string>
     <string name="settings_backup_failed">備份失敗</string>
     <string name="settings_restore">還原</string>
-    <string name="settings_restoring">還原中…</string>
+    <string name="settings_restoring">還原中……</string>
     <string name="settings_restore_success">還原成功！</string>
     <string name="settings_restore_failed">還原失敗</string>
     <string name="group_network">網路</string>
@@ -160,7 +160,7 @@
     <string name="module_readme">自述檔案</string>
     <string name="module_releases">版本</string>
     <string name="module_information">資訊</string>
-    <string name="module_information_homepage">主頁</string>
+    <string name="module_information_homepage">首頁</string>
     <string name="module_information_source_url">原始碼</string>
     <string name="module_information_collaborators">合作者</string>
     <string name="module_release_view_assets">附件</string>
@@ -170,6 +170,7 @@
     <string name="module_release_no_more">沒有更早期的版本</string>
     <string name="repo_load_failed">模組倉庫載入失敗：%s</string>
 
+    
 
     <string name="app_destroyed">此應用程式已損毀，請確保您從官方來源下載該應用程式。</string>
     <string name="outdated_manager">LSPosed Manager 和 LSPosed 核心的版本不一致。請重新安裝對應的版本。</string>
@@ -177,5 +178,6 @@
     <string name="verbose_log_not_avaliable">詳細日誌不可用，如果您只是啟用了它而沒有重新啟動，請在重新啟動後再試一次。</string>
     <string name="NotInstall">尚未安裝</string>
     <string name="NotInstallDetail">未安裝 LSPosed</string>
-    <string name="translators"><![CDATA[<a href="https://github.com/david082321">david082321</a>]]></string>
+    <string name="translators"><![CDATA[<a href="https://github.com/tony8077616">孟武.尼德霍格.龍</a>、<a href="https://github.com/david082321">david082321</a>]]></string>
+    <string name="copy_toast_msg">已複製</string>
 </resources>
