--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,6 +125,7 @@
     <string name="force_stop_dlg_text">If you force stop an app, it may misbehave.</string>
     <string name="reboot_required">Reboot is required for this change to apply</string>
     <string name="reboot">Reboot</string>
+    <string name="menu_filter">Filter…</string>
 
     <!-- ModulesActivity and AppListActivity -->
     <string name="modules_app_store">View in App Store</string>
