--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -67,17 +67,17 @@
     <string name="not_logcat_2">Se alguém lhe perguntou pelo Logcat do Android, você está na seção errada. Este é o registro do LSPosed; se você precisa do logcat, no XDA você pode encontrar o que precisa.</string>
 
     <!-- Notification -->
-    <string name="module_is_not_activated_yet">O módulo do LSPosed ainda não está ativo</string>
+    <string name="module_is_not_activated_yet">O módulo do Xposed ainda não está ativo</string>
     <string name="module_is_not_activated_yet_detailed">%s foi instalado, mas ainda não está ativo</string>
     <string name="xposed_module_updated_notification_content">%s foi atualizado.</string>
 
     <!-- ModulesActivity -->
     <string name="module_empty_description">(nenhuma descrição fornecida)</string>
     <string name="module_no_ui">Este módulo não fornece uma interface do usuário</string>
-    <string name="xposed_module_updated_notification_title">Módulo do LSPosed atualizado</string>
-    <string name="warning_xposed_min_version">Este módulo exige uma versão mais recente do LSPosed (%d) e, por isso, não pode ser ativado</string>
-    <string name="no_min_version_specified">Este módulo não cita qual a versão necessária para o LSPosed.</string>
-    <string name="warning_min_version_too_low">Este módulo foi criado para a versão %1$d do LSPosed, mas devido mudanças incompatíveis na versão %2$d, ele foi desativado</string>
+    <string name="xposed_module_updated_notification_title">Módulo do Xposed atualizado</string>
+    <string name="warning_xposed_min_version">Este módulo exige uma versão mais recente do Xposed (%d) e, por isso, não pode ser ativado</string>
+    <string name="no_min_version_specified">Este módulo não cita qual a versão necessária para o Xposed.</string>
+    <string name="warning_min_version_too_low">Este módulo foi criado para a versão %1$d do Xposed, mas devido mudanças incompatíveis na versão %2$d, ele foi desativado</string>
     <string name="warning_installed_on_external_storage">Este módulo não pode ser carregado porque está instalado no cartão de memória. Por favor, mova para o armazenamento interno</string>
     <string name="module_uninstall">Desinstalar</string>
     <string name="module_settings">Configurações do módulo</string>
@@ -152,7 +152,8 @@
     <string name="dns_over_http_summary">Solução alternativa para envenenamento de DNS em alguns países</string>
     <string name="theme_color">Cor do tema</string>
     <string name="theme_color_summary">Cor que aparece com mais frequência no app</string>
-    <string name="settings_show_hidden_icon_apps_enabled">Exibição forçada do ícone do aplicativo no Android 10+</string>
+    <string name="theme_color_system_accent">Cor de realce do sistema</string>
+    <string name="settings_show_hidden_icon_apps_enabled">(Android 10+) Limitar aplicativos a esconderem seus ícones do lançador</string>
     <string name="settings_group_system">Sistema</string>
 
     <!-- Module Repo -->
