--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -153,7 +153,8 @@
     <string name="dns_over_http_summary">解决某些地区的 DNS 污染问题</string>
     <string name="theme_color">主题颜色</string>
     <string name="theme_color_summary">应用中最常见的颜色</string>
-    <string name="settings_show_hidden_icon_apps_enabled">（Android 10+）限制应用隐藏其启动器图标</string>
+    <string name="settings_show_hidden_icon_apps_enabled">强制应用在启动器中显示图标</string>
+    <string name="settings_show_hidden_icon_apps_enabled_summary">在 Android 10 之后，应用（特别是 Xposed 模块）不被允许隐藏启动器图标。关闭本选项以禁用此功能。</string>
     <string name="settings_group_system">系统</string>
 
     <!-- Module Repo -->
