Install to profiles (#592)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,10 @@
     <string name="module_uninstalled">Uninstalled %1$s</string>
     <string name="module_uninstall_failed">Uninstall unsuccessful</string>
     <string name="user_title">User %d</string>
+    <string name="install_to_user">Install to user %d</string>
+    <string name="install_to_user_message">Want to install %1$s to user %2$d? It is recommended to install manually, forcing installation via LSPosed may cause problems.</string>
+    <string name="module_installed">%1$s installed</string>
+    <string name="module_install_failed">install failed</string>
 
     <!-- AppListActivity -->
     <string name="compile_speed">Re-optimize</string>
