--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -86,6 +86,10 @@
     <string name="module_uninstalled">已卸载%1$s</string>
     <string name="module_uninstall_failed">卸载失败</string>
     <string name="user_title">用户 %d</string>
+    <string name="install_to_user">安装到用户 %d</string>
+    <string name="install_to_user_message">要安装 %1$s 到用户 %2$d 吗？建议手动安装或多开，通过 LSPosed 强制安装可能会出现问题。</string>
+    <string name="module_installed">已安装 %1$s</string>
+    <string name="module_install_failed">安装失败</string>
 
     <!-- AppListActivity -->
     <string name="compile_speed">重新优化</string>
