--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -39,9 +39,9 @@
     <string name="activated">Activé</string>
     <string name="not_installed">Non installé</string>
     <string name="partial_activated">Partiellement activé</string>
-    <string name="selinux_policy_not_loaded_summary">SEPolicy n\'est pas chargé correctement</string>
-    <string name="selinux_policy_not_loaded">&lt;b&gt;AVERTISSEMENT:&lt;\/b&gt; SEPolicy n\'est pas chargé correctement, les modules qui modifient le sous-système ne fonctionneront pas.</string>
-    <string name="info_api_version">Version de l\'API</string>
+    <string name="selinux_policy_not_loaded_summary">SEPolicy n\’est pas chargé correctement</string>
+    <string name="selinux_policy_not_loaded">&lt;b&gt;AVERTISSEMENT:&lt;\/b&gt; SEPolicy n\’est pas chargé correctement, les modules qui modifient le sous-système ne fonctionneront pas.</string>
+    <string name="info_api_version">Version de l\’API</string>
     <string name="info_framework_version">Version du framework</string>
     <string name="info_manager_version">Version du gestionnaire</string>
     <string name="info_system_version">Version du système</string>
@@ -64,7 +64,7 @@
     <string name="logs_cannot_read">Lecture du journal impossible: \n</string>
     <string name="menuReload">Recharger</string>
     <string name="logs_clear_failed_2">Échec d\’effacement du journal</string>
-    <string name="not_logcat_2">S\'il vous ai demandé un Logcat Android, alors vous êtes dans la mauvaise section. Ici il s\'agit du journal LSPosed; si vous avez besoin d\’un logcat, vous pourrez trouver ce dont vous avez besoin sur XDA.</string>
+    <string name="not_logcat_2">S\’il vous ai demandé un Logcat Android, alors vous êtes dans la mauvaise section. Ici il s\’agit du journal LSPosed; si vous avez besoin d\’un logcat, vous pourrez trouver ce dont vous avez besoin sur XDA.</string>
 
     <!-- Notification -->
     <string name="module_is_not_activated_yet">Le module LSPosed n\’est pas encore actif</string>
@@ -85,6 +85,11 @@
     <string name="module_uninstall_message">Voulez-vous installer ce module?</string>
     <string name="module_uninstalled">Désinstallation de %1$s</string>
     <string name="module_uninstall_failed">Échec de la désinstallation</string>
+    <string name="module_installed">Ajout de %1$s à l’utilisateur %2$d</string>
+    <string name="module_install_failed">Échec de l\’ajout du module</string>
+    <string name="user_title">Utilisateur %d</string>
+    <string name="install_to_user">Installation dans utilisateur %d</string>
+    <string name="install_to_user_message">Vous voulez installer %1$s dans l’utilisateur %2$d? Il est recommandé de l’installer manuellement, fercer l’installation via LSPosed pourrait causer des problèmes.</string>
 
     <!-- AppListActivity -->
     <string name="compile_speed">Ré-optimiser</string>
@@ -120,7 +125,7 @@
     <string name="menu_restore">Restaurer</string>
     <string name="force_stop">Forcer l\’arrêt</string>
     <string name="force_stop_dlg_title">Forcer l\’arrêt?</string>
-    <string name="force_stop_dlg_text">Si vous forcez l\'arrêt d\’une application, elle peut mal se comporter.</string>
+    <string name="force_stop_dlg_text">Si vous forcez l\’arrêt d\’une application, elle peut mal se comporter.</string>
     <string name="reboot_required">Redémarrage requis pour les changements prennent effet</string>
     <string name="reboot">Redémarrage</string>
     <string name="menu_filter">Filtre…</string>
@@ -151,28 +156,34 @@
     <string name="dns_over_http">DNS sur HTTPS</string>
     <string name="dns_over_http_summary">Contourner la censure DNS dans certains pays</string>
     <string name="theme_color">Couleure du thème</string>
-    <string name="theme_color_summary">Couleure apparaissant fréquemment dans l\'application</string>
+    <string name="theme_color_summary">Couleure apparaissant fréquemment dans l\’application</string>
+    <string name="theme_color_system_accent">Couleure d\’accentuation du système</string>
+    <string name="settings_show_hidden_icon_apps_enabled">Forcer les applications à afficher les icônes dans le lanceur</string>
+    <string name="settings_show_hidden_icon_apps_enabled_summary">Après Android 10, les applications (notamment les modules Xposed) ne sont pas autorisées à masquer leurs icônes des lanceurs. Désactiver le commutateur pour désactiver cette fonctionnalité.</string>
+    <string name="settings_group_system">Système</string>
 
     <!-- Module Repo -->
     <string name="module_readme">Lisez moi</string>
     <string name="module_releases">Versions</string>
     <string name="module_information">Informations</string>
-    <string name="module_information_homepage">Page d\'accueil</string>
+    <string name="module_information_homepage">Page d\’accueil</string>
     <string name="module_information_source_url">Code source</string>
     <string name="module_information_collaborators">Collaborateurs</string>
     <string name="module_release_view_assets">Actifs</string>
     <string name="menu_open_in_browser">Ouvrir dans le navigateur</string>
     <string name="refresh">Rafraîchir</string>
     <string name="module_release_load_more">Afficher les anciennes versions</string>
-    <string name="module_release_no_more">Pas d\'autres versions</string>
+    <string name="module_release_no_more">Pas d\’autres versions</string>
     <string name="repo_load_failed">Échec de chargement du dépôt des modules: %s</string>
 
-    <string name="app_destroyed">Cette application à été détruite, merci de vous assurer que vous l\'avez bien téléchargé depuis la source officielle.</string>
+    <string name="app_destroyed">Cette application à été détruite, merci de vous assurer que vous l\’avez bien téléchargé depuis la source officielle.</string>
     <string name="outdated_manager">Version du Gestionnaire LSPosed et du noyau LSPosed ne sont pas cohérents. Merci de réinstaller la version correspondante.</string>
-    <string name="lsposed_not_active">LSPosed n\'est pas installé ou n\'est pas actif.</string>
-    <string name="verbose_log_not_avaliable">Journal détaillé indisponible, si vous l\'avez juste activé sans redémarrer, essayez à nouveau après avoir redémarré.</string>
+    <string name="lsposed_not_active">LSPosed n\’est pas installé ou n\’est pas actif.</string>
+    <string name="verbose_log_not_avaliable">Journal détaillé indisponible, si vous l\’avez juste activé sans redémarrer, essayez à nouveau après avoir redémarré.</string>
     <string name="NotInstall">Non installé</string>
-    <string name="NotInstallDetail">LSPosed n\'est pas installé</string>
+    <string name="NotInstallDetail">LSPosed n\’est pas installé</string>
     <string name="translators"><![CDATA[<a href="https://forum.xda-developers.com/member.php?u=5332893">Rom</a>]]></string>
     <string name="copy_toast_msg">Copié</string>
+    <string name="list_empty">¯\\\\_(ツ)_\/¯\nIl n\’y a rien ici</string>
+    <string name="add_module_to_user">Ajout du module à l\’utilisateurAdd module to user</string>
 </resources>
