--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -172,5 +172,18 @@
     <string name="verbose_log_not_avaliable">Uitgebreid logboek is niet beschikbaar. Als u het net hebt ingeschakeld zonder opnieuw op te starten, probeer het dan opnieuw na het opnieuw opstarten.</string>
     <string name="NotInstall">Niet geïnstalleerd</string>
     <string name="NotInstallDetail">LSPosed is niet geïnstalleerd</string>
-    <string name="translators"><![CDATA[<a href="https://github.com/Pandemic-XDA">Pandemic (Pandemic-XDA)</a>]]></string>
+    <string name="settings_show_hidden_icon_apps_enabled">Forceer apps om launcher-pictogrammen weer te geven</string>
+    <string name="settings_show_hidden_icon_apps_enabled_summary">Na Android 10 mogen apps (vooral Xposed-modules) hun opstartpictogrammen niet verbergen. Schakel de schakelaar uit om deze functie uit te schakelen.</string>
+    <string name="settings_group_system">Systeem</string>
+    <string name="system_inject_fail_summary">Systeem Framework injectie is mislukt</string> 
+    <string name="system_inject_fail"><![CDATA[<b>WAARSCHUWING:</b> Systeem Framework injectie mislukt.<br/>Dit is zeldzaam en kan worden veroorzaakt door <b>Magisk</b> of sommige Magisk-modules van lage kwaliteit.<br/>Probeer andere Magisk-modules dan Riru en LSPosed uit te schakelen of stuur een volledig logboek naar de ontwikkelaars.]]></string>
+    <string name="copy_toast_msg">Gekopieerd</string>
+    <string name="list_empty">¯\\\\_(ツ)_\/¯\nNiets hier</string>
+    <string name="add_module_to_user">Module toevoegen aan gebruiker</string>
+    <string name="module_installed">Toegevoegd %1$s naar gebruiker %2$d</string>
+    <string name="module_install_failed">Het toevoegen van de module is mislukt</string>
+    <string name="user_title">Gebruiker %d</string>
+    <string name="install_to_user">Installeer naar gebruiker %d</string>
+    <string name="install_to_user_message">Wil je installeren %1$s naar gebruiker %2$d? Het wordt aanbevolen om handmatig te installeren, het forceren van installatie via LSPosed kan problemen veroorzaken.</string>
+    <string name="translators"><![CDATA[<a href="https://github.com/Pandemic-XDA">Pandemic-XDA</a>]]></string>
 </resources>
